--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="styles.css"/>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <img src="images/cbomba.jpg" alt="CBOMBA MI DIOS">
     <h1>RUTINA</h1>
-    <ol>
-        <li><a href=dia1/dia1.html>Lunes</a></li>
-        <li><a href=dia2/dia2.html>Martes</a></li>
-        <li><a href=dia3/dia3.html>Miercoles</a></li>
-        <li><a href=dia4/dia4.html>Jueves</a></li>
-        <li><a href=dia5/dia5.html>Viernes</a></li>
-    </ol>
+    <ul>
+        <li><a href=dia1/dia1.html>LUNES</a></li>
+        <li><a href=dia2/dia2.html>MARTES</a></li>
+        <li><a href=dia3/dia3.html>MIERCOLES</a></li>
+        <li><a href=dia4/dia4.html>JUEVES</a></li>
+        <li><a href=dia5/dia5.html>VIERNES</a></li>
+    </ul>
 </head>
 <body>
     
