Se agrego disenho a la pagina,color y edicion de css varios, index se agregaron clases y cambio el orden de h1 y img

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <img src="images/cbomba.jpg" alt="CBOMBA MI DIOS">
-    <h1>RUTINA</h1>
-    <ul>
+    <h1 class="box">RUTINA</h1>
+    <img class="cbomba" src="images/cbomba.jpg" alt="CBOMBA MI DIOS">
+    
+    <ul class="box">
         <li><a href=dia1/dia1.html>LUNES</a></li>
         <li><a href=dia2/dia2.html>MARTES</a></li>
         <li><a href=dia3/dia3.html>MIERCOLES</a></li>
